# py-gopac

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  build.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml  test.yml
examples/: example1.py  example2.py  proxy.pac
extension/: README.md
extension/src/gopaccli/: go.mod  go.sum  gopaccli.go
extension/src/parser/: main.go
gopac/: exceptions.py  gopac.py  logger.py
tests/: conftest.py  test_gopac.py
